# AIWeldingMS

./: .gitignore  readme.md
ai-welding-server/: docker-compose.yml  fix.py  fix2.py  main.py  pyproject.toml  test_agent.py
ai-welding-server/apps/courses/: api.py  apps.py  models.py
ai-welding-server/apps/courses/migrations/: 0001_initial.py  0002_course_assistant_and_grouping.py  0003_devicetelemetry.py  0004_coursegrade.py  0005_teachercalendaroverride.py  0006_teachercalendaroverride_note_and_more.py
ai-welding-server/apps/devices/: admin.py  api.py  models.py
ai-welding-server/apps/devices/migrations/: 0001_initial.py  0002_device_start_time_end_time.py
ai-welding-server/apps/students/: api.py  apps.py
ai-welding-server/apps/users/: admin.py  api.py  assistant_api.py  backends.py  models.py
ai-welding-server/apps/users/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_blacklistedtoken.py  0004_user_is_approved.py  0005_student_profile_fields.py  0006_majorcatalog_classcatalog.py  0007_majorclassmanagement_alter_user_options_and_more.py  0008_teacherchatsession_teacherchatmessage.py
ai-welding-server/conf/: settings.py  urls.py
ai-welding-server/conf_agent/: __init__.py  agent.py  llm.py  settings.py
ai-welding-server/conf_agent/prompts/: grade_prompt.py
ai-welding-server/conf_agent/tools/: __init__.py  course_tool.py  grade_tool.py
ai-welding-server/core/: api.py  auth.py  models.py
ai-welding-server/templates/data_template/: class_upload_template.xlsx  major_upload_template.xlsx  student_upload_template.xlsx
(+28 files in other folders)
